--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,6 +7,6 @@
     <script src="/js/app.js" charset="utf-8"></script>
   </head>
   <body>
-    <h1>From a Static File</h1>
+    <h1>Weather</h1>
   </body>
 </html>
