--- a/views/about.hbs
+++ b/views/about.hbs
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
-    <h1>Help</h1>
+    <h1>{{title}}</h1>
+    <img src="/img/weather.png" alt="">
+    <p>Created by {{name}}</p>
   </body>
 </html>
