--- a/views/help.hbs
+++ b/views/help.hbs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
-    <h1>About</h1>
-    <img src="/img/weather.png" alt="">
+    <h1>Help</h1>
+    <p>{{helpText}}</p>
   </body>
 </html>
