--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,6 +7,7 @@
     <script src="/js/app.js" charset="utf-8"></script>
   </head>
   <body>
-    <h1>Weather</h1>
+    <h1>{{title}}</h1>
+    <p>Created by {{name}}</p>
   </body>
 </html>
