--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
-    <h1>Help</h1>
-    <p>{{helpText}}</p>
+    {{>header}}
+    <img src="/img/weather.png" alt="">
+    {{>footer}}
   </body>
 </html>
