--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/app.js" charset="utf-8"></script>
   </head>
   <body>
-    <h1>{{title}}</h1>
-    <p>Created by {{name}}</p>
+    {{>header}}
+    <p>{{helpText}}</p>
+    {{>footer}}
   </body>
 </html>
