--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="/css/styles.css">
+    <script src="/js/app.js" charset="utf-8"></script>
   </head>
   <body>
-    <h1>{{title}}</h1>
-    <img src="/img/weather.png" alt="">
-    <p>Created by {{name}}</p>
+    {{>header}}
+    {{>footer}}
   </body>
 </html>
