--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,14 @@
-h1 {
-  color: grey;
+body {
+  color: #333333;
+  font-family: Arial, Helvetica, sans-serif; 
+  max-width: 650px;
+  margin: 0 auto;
+  padding: 0 16px;
 }
 
-img {
-  width: 500px;
+footer {
+  color: #888888;
+  border-top: 1px solid #eeeeee;
+  margin-top: 16px;
+  padding: 16px 0;
 }
