--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -6,8 +6,11 @@
     <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
-    {{>header}}
-    <img src="/img/weather.png" alt="">
+	  <div class="mainContent">
+		  {{>header}}
+		  <img class="aboutImg" src="/img/weather.png" alt="">
+	  </div>
+    
     {{>footer}}
   </body>
 </html>
