--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -7,7 +7,16 @@
     <script src="/js/app.js" charset="utf-8"></script>
   </head>
   <body>
-    {{>header}}
+
+	  <div class="mainContent">
+		  {{>header}}
+		  
+		  <p>Use this site to get your weather!</p>
+	  </div>
+
+    
     {{>footer}}
   </body>
+
+
 </html>
