--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,7 +3,15 @@ body {
   	font-family: Arial, Helvetica, sans-serif; 
   	max-width: 650px;
   	margin: 0 auto;
-  	padding: 0 16px;
+	padding: 0 16px;
+
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh
+}
+
+.mainContent {
+	flex-grow: 1;
 }
 
 footer {
@@ -27,4 +35,8 @@ header a {
 	color: #888888;
 	margin-right: 16px;
 	text-decoration: none;
+}
+
+.aboutImg {
+	width: 250px;
 }
