--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
-    {{>header}}
+    <div class="mainContent">
+      {{>header}}
     <p>{{helpText}}</p>
+    </div>
     {{>footer}}
   </body>
 </html>
