finished basic styling

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Weather</title>
+	<link rel="icon" href="/img/icon.png">
     <link rel="stylesheet" href="/css/styles.css">
     <script src="/js/app.js" charset="utf-8"></script>
   </head>
@@ -10,7 +11,7 @@
 
 	  <div class="mainContent">
 		  {{>header}}
-		  
+
 		  <p>Use this site to get your weather!</p>
 	  </div>
 
