--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Help</title>
+    	<link rel="icon" href="/img/icon.png">
+
     <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
