--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,11 @@
 	  <div class="mainContent">
 		  {{>header}}
 		  <img class="aboutImg" src="/img/weather.png" alt="">
+      <p>
+        A simple Weather App to fetch weather info based on search term provided by the user.
+        Built using Node.js, Darksky, Mapbox. <br> <br>
+        <a href="https://github.com/HarshaKy/weather-app-final">GitHub</a>
+      </p>
 	  </div>
     
     {{>footer}}
