--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -40,3 +40,22 @@ header a {
 .aboutImg {
 	width: 250px;
 }
+
+input {
+	border: 1px solid #cccccc;
+	padding: 8px;
+}
+
+button {
+	cursor: pointer;
+	border: 1px solid #888888;
+	background: #eeeeee;
+	color: black;
+	padding: 8px;
+}
+
+a {
+	color: #888888;
+	margin-right: 16px;
+	text-decoration: none;
+}
