--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -1,3 +1,3 @@
 <footer>
-    <p>Created by <a href="https://github.com/HarshaKy">{{name}}</a></p>
+    <p>Created by <a href="https://github.com/HarshaKy" target="_blank">{{name}}</a></p>
 </footer>
