--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -14,7 +14,7 @@
       <p>
         A simple Weather App to fetch weather info based on search term provided by the user.
         Built using Node.js, Darksky, Mapbox. <br> <br>
-        <a href="https://github.com/HarshaKy/weather-app-final">GitHub</a>
+        <a href="https://github.com/HarshaKy/weather-app-final" target="_blank">GitHub</a>
       </p>
 	  </div>
     
